# notsolong

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  api  notsolong.code-workspace  podman-compose.yml  setenv.sh  showenv.sh
backend/: .env.example  .env.podman.example  Containerfile  Makefile  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  turnstile.py  views.py
backend/accounts/management/commands/: createuser.py  ensure_google_socialapp.py
backend/accounts/migrations/: 0001_initial.py  0002_rename_display_name_user_username.py
backend/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/management/commands/: recap.py  seed.py
backend/api/migrations/: 0001_initial.py  0002_rename_nosolong_to_recap.py  0003_alter_recap_title_alter_recap_user.py
backend/api/services/: votes.py
backend/api/tests/: test_api.py
backend/db-init/: 0000-init.sh
backend/notsolong/: README.md  asgi.py  urls.py  views.py  wsgi.py
backend/notsolong/settings/: __init__.py  base.py  dev.py  prod.py
backend/public/: schema.yml
backend/scripts/: entrypoint.sh
deploy/: install.sh
deploy/quadlets/: notsolong-db.container  notsolong-web.container  notsolong.network  notsolong.volume
frontend/: .env.example  Makefile  capacitor.config.ts  index.html  package-lock.json  package.json  schema.yml  tsconfig.app.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.ts
systemd/: notsolong.service
(+33 files in other folders)
